# TaskManager

./: CMakeLists.txt  README.md
include/: ConsoleUI.h  MainWindow.h  SimpleTask.h  Task.h  TaskManager.h  TimedTask.h
src/: ConsoleUI.cpp  MainWIndow.cpp  MainWindow.ui  SimpleTask.cpp  Task.cpp  TaskManager.cpp  TimedTask.cpp  main.cpp
taskmanager/: CMakeLists.txt
taskmanager/include/: MainWindow.h  SimpleTask.h  Task.h  TaskManager.h  TimedTask.h
taskmanager/src/: ConsoleUI.cpp  MainWIndow.cpp  MainWindow.ui  SimpleTask.cpp  Task.cpp  TaskManager.cpp  TimedTask.cpp  main.cpp
